ingress/traefik/nginx-deployment-traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-traefik
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: randeerdil/asp-dot-net-core-cv:20230820064955
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx-traefik
spec:
  selector:
    app:  nginx
  # ---
  type:  ClusterIP
  ports:
   - name:  http
     port:  80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-traefik
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.lala-1992.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
