ingress/traefik/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-test
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.lala-1992.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80

status:
  loadBalancer:
    ingress:
      - ip: 4.151.86.160
